# Latent-Space-Topology-Evolution-in-Multilayer-Perceptrons

./: .gitignore  Experiment.ipynb  Experiment.py  Experiment_cardiotocography.py  LICENSE  PIPELINE.md  README.md  VR_trajectories.py  __init__.py  experiment.keras  pyproject.toml
docs/: API.md
experiments/: __init__.py  cardio.py  cifar_dense.py  circles.py  circles_2_3_1_s1234.keras  coil100.py  resnet.py
ltep/: bipersistence.py  metrics.py  output.py  pipeline.py  plots.py  runtime.py  vr.py
ltep/datasets/: __init__.py  _mlp_persistence.py  cardio.py  cifar_dense.py  coil100.py  mlp_persistence_convergence.py  resnet.py  resnet_features.py
